--- a/dino/MainPage.xaml
+++ b/dino/MainPage.xaml
@@ -1,36 +1,92 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="dino.MainPage">
+             x:Class="dino.MainPage"
+             Shell.NavBarIsVisible="False">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+     <Grid>
+              <Grid.GestureRecognizers>
+                     <TapGestureRecognizer Tapped="OnGridClicked"/>
+              </Grid.GestureRecognizers>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+              <Image Source="background.png"
+                     Opacity=".5"
+                     Aspect="AspectFill"
+                     HorizontalOptions="Fill"
+                     VerticalOptions="Fill"/>
+              <Label Text="Score:000"
+                     x:Name="LabelScore"
+                     HorizontalOptions="End"
+                     VerticalOptions="Start"
+                     Margin="10,10,10,10 "/>
+              <Image Source="cacto.png"
+                     x:Name="imgcacto"
+                     HeightRequest="650"
+                     WidthRequest="50"
+                     Aspect="AspectFit"
+                     HorizontalOptions="Center"
+                     VerticalOptions="Center"/>
+              <Image Source="dino.png"
+                     x:Name="Dino"
+                     HeightRequest="310"
+                     WidthRequest="150"
+                     HorizontalOptions="Start"
+                     VerticalOptions="End"/>
+              <Image Source="chao.png"
+                     x:Name="chao"
+                     HeightRequest="90"
+                     Aspect="AspectFill"
+                     HorizontalOptions="Center"
+                     VerticalOptions="End"/>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+              <Frame IsVisible="true"
+                     x:Name="FrameGameOver"
+                     BackgroundColor="#99000000"
+                     HorizontalOptions="Fill"
+                     VerticalOptions="Fill"
+                     CornerRadius="0">
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                     <Frame.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="Oi"/>
+                     </Frame.GestureRecognizers>
+                     <Grid>
+                            <Grid.RowDefinitions>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Image Source="birdjump.png"
+                                   HeightRequest="500"
+                                   WidthRequest="250"
+                                   Grid.Row="0"/>
+                            <Frame Grid.Row="1"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Center">
+                                   <Grid>
+                                          <Grid.ColumnDefinitions>
+                                                 <ColumnDefinition Width="*"/>
+                                                 <ColumnDefinition Width="*"/>
+                                          </Grid.ColumnDefinitions>
+                                   </Grid>
+                                   <Image Source="moedinha.png"
+                                          Grid.Column="0"/>
+                                   <Label Text="Você passou por 000 obstáculos!!"
+                                          x:Name="LabelObstaculos"
+                                          Grid.Column="1"/>
+                            </Frame>
+                            <Image Source="play.png"
+                                   HeightRequest="200"
+                                   WidthRequest="165"
+                                   Grid.Row="2"/>
+
+
+
+                     </Grid>
+
+              </Frame>
+
+
+       </Grid>
 
 </ContentPage>
