--- a/dino/MainPage.xaml
+++ b/dino/MainPage.xaml
@@ -4,87 +4,21 @@
              x:Class="dino.MainPage"
              Shell.NavBarIsVisible="False">
 
-     <Grid>
-              <Grid.GestureRecognizers>
-                     <TapGestureRecognizer Tapped="OnGridClicked"/>
-              </Grid.GestureRecognizers>
-
+       <Grid>
               <Image Source="background.png"
-                     Opacity=".5"
                      Aspect="AspectFill"
                      HorizontalOptions="Fill"
                      VerticalOptions="Fill"/>
-              <Label Text="Score:000"
-                     x:Name="LabelScore"
-                     HorizontalOptions="End"
-                     VerticalOptions="Start"
-                     Margin="10,10,10,10 "/>
-              <Image Source="cacto.png"
-                     x:Name="imgcacto"
-                     HeightRequest="650"
+              <Image Source="montain.png"/>
+              <Image Source="houseofsnoopy.png"
+                     HeightRequest="50"
                      WidthRequest="50"
-                     Aspect="AspectFit"
-                     HorizontalOptions="Center"
+                     HorizontalOptions="End"
                      VerticalOptions="Center"/>
-              <Image Source="dino.png"
-                     x:Name="Dino"
-                     HeightRequest="310"
-                     WidthRequest="150"
-                     HorizontalOptions="Start"
-                     VerticalOptions="End"/>
-              <Image Source="chao.png"
-                     x:Name="chao"
-                     HeightRequest="90"
-                     Aspect="AspectFill"
-                     HorizontalOptions="Center"
-                     VerticalOptions="End"/>
+              <Image Source="graminha.png"
+                      HorizontalOptions="End"
+                      VerticalOptions="End"/>
 
-              <Frame IsVisible="true"
-                     x:Name="FrameGameOver"
-                     BackgroundColor="#99000000"
-                     HorizontalOptions="Fill"
-                     VerticalOptions="Fill"
-                     CornerRadius="0">
-
-                     <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="Oi"/>
-                     </Frame.GestureRecognizers>
-                     <Grid>
-                            <Grid.RowDefinitions>
-                                   <RowDefinition Height="*"/>
-                                   <RowDefinition Height="*"/>
-                                   <RowDefinition Height="*"/>
-                                   <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Image Source="birdjump.png"
-                                   HeightRequest="500"
-                                   WidthRequest="250"
-                                   Grid.Row="0"/>
-                            <Frame Grid.Row="1"
-                                   HorizontalOptions="Center"
-                                   VerticalOptions="Center">
-                                   <Grid>
-                                          <Grid.ColumnDefinitions>
-                                                 <ColumnDefinition Width="*"/>
-                                                 <ColumnDefinition Width="*"/>
-                                          </Grid.ColumnDefinitions>
-                                   </Grid>
-                                   <Image Source="moedinha.png"
-                                          Grid.Column="0"/>
-                                   <Label Text="Você passou por 000 obstáculos!!"
-                                          x:Name="LabelObstaculos"
-                                          Grid.Column="1"/>
-                            </Frame>
-                            <Image Source="play.png"
-                                   HeightRequest="200"
-                                   WidthRequest="165"
-                                   Grid.Row="2"/>
-
-
-
-                     </Grid>
-
-              </Frame>
 
 
        </Grid>
