--- a/dino/MainPage.xaml
+++ b/dino/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="dino.MainPage"
+             xmlns:FF="clr.namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
              Shell.NavBarIsVisible="False">
 
        <Grid>
@@ -54,12 +55,15 @@
                             HeightRequest="80"/>
               </HorizontalStackLayout>
 
-              <Image Source="player01.png"
-                     x:Name="imgPlayer"
-                     HeightRequest="320"
-                     WidthRequest="100"
-                     HorizontalOptions="Start"
-                     VerticalOptions="End"/>
+              <FF:CachedImageView Source="player01.png"
+                                  CacheType="Disk"
+                                  CacheDuration="365"
+                                  x:Name="imgPlayer"
+                                  Margin="10,0,0,80"
+                                  HeightRequest="150"
+                                  WidthRequest="100"
+                                  HorizontalOptions="Start"
+                                  VerticalOptions="End"/>
 
        </Grid>
 
