--- a/dino/MainPage.xaml
+++ b/dino/MainPage.xaml
@@ -2,10 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="dino.MainPage"
-             xmlns:FF="clr.namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
+             xmlns:ff="clr-namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
              Shell.NavBarIsVisible="False">
 
        <Grid>
+              <Grid.GestureRecognizers>
+                     <TapGestureRecognizer Tapped="OnGridClicked"/>
+              </Grid.GestureRecognizers>
 
               <HorizontalStackLayout x:Name="Layer1">
                      <Image Source="background.jpg"
@@ -55,8 +58,8 @@
                             HeightRequest="80"/>
               </HorizontalStackLayout>
 
-              <FF:CachedImageView Source="player01.png"
-                                  CacheType="Disk"
+              <ff:CachedImageView Source="player01.png"
+                                  CacheType="All"
                                   CacheDuration="365"
                                   x:Name="imgPlayer"
                                   Margin="10,0,0,80"
