--- a/dino/MainPage.xaml
+++ b/dino/MainPage.xaml
@@ -67,28 +67,28 @@
                                   WidthRequest="100"
                                   HorizontalOptions="Start"
                                   VerticalOptions="End"/>
-              <Image Source="enemy01"
+              <Image Source="enemy01.png"
                      x:Name="imgEnemy1"
-                     HeightRequest="150"
-                     WidthRequest="100"
+                     HeightRequest="200"
+                     WidthRequest="150"
                      HorizontalOptions="End"
                      VerticalOptions="End"/>
-              <Image Source="enemy02"
+              <Image Source="enemy02.png"
                      x:Name="imgEnemy2"
-                     HeightRequest="150"
-                     WidthRequest="100"
+                     HeightRequest="200"
+                     WidthRequest="150"
                      HorizontalOptions="End"
                      VerticalOptions="End"/>
-              <Image Source="enemy03"
+              <Image Source="enemy03.png"
                      x:Name="imgEnemy3"
-                     HeightRequest="150"
-                     WidthRequest="100"
+                     HeightRequest="200"
+                     WidthRequest="150"
                      HorizontalOptions="End"
                      VerticalOptions="End"/>
-              <Image Source="enemy04"
+              <Image Source="enemy04.png"
                      x:Name="imgEnemy4"
-                     HeightRequest="150"
-                     WidthRequest="100"
+                     HeightRequest="200"
+                     WidthRequest="150"
                      HorizontalOptions="End"
                      VerticalOptions="End"/>
 
